2008-01-18  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Parse *@<version>
	symbols names as wildcards and not as regular symbols. They
	provide the same dependency information for all symbols that share
	the same version.
	* scripts/Dpkg/Shlibs/SymbolFile.pm (merge_symbols): Use
	information provided by wildcards entries when new symbols are
	added.
	* scripts/dpkg-gensymbols.pl: Disable some checks which can't be
	done when symbols files have been generated with the help of
	wildcard entries.
	* man/dpkg-gensymbols.1: Update the manual page to explain how to
	use wildcard entries.

2008-01-18  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Changelog.pm (parse_changelog): Rewrite it completely
	to not call dpkg-parsechangelog but do the work of this program by itself.
	* scripts/dpkg-parsechangelog.pl: Rewrote it to use the enhanced
	parse_changelog() function.
	* scripts/dpkg-genchanges.pl, script/dpkg-gencontrol.pl: Adapted to use
	the modified parse_changelog().
	* scripts/dpkg-gensymbols.pl, scripts/dpkg-source.pl: Likewise.

	* scripts/dpkg-genchanges.pl: Change logic of -si option to
	include the original tarball only if the current upstream version differs
	from the upstream version of the previous changelog entry.

	* scripts/dpkg-genchanges.pl: Some code refactoring. Also fix the
	generation of the Description field to not have duplicate description
	in case of udeb (a single description per binary package is enough).
	Source only uploads will loose their Description: fields since they
	have no associated binary packages and Descriptions are only added
	for binary packages where we have a corresponding .deb to upload.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* m4/arch.m4 (_DPKG_ARCHITECTURE): Do not use backticks inside double
	quotes, to support ancient shells.
	* m4/libs.m4 (DPKG_LIB_SELINUX): Likewise.

2008-01-18  Guillem Jover  <guillem@debian.org>
