@@ -1,5 +1,13 @@
 2008-01-18  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Shlibs/SymbolFile.pm,
+	scripts/Dpkg/Shlibs/Objdump.pm, scripts/Dpkg/Shlibs.pm: Update and
+	fix many syserr(), error(), warning() and subprocerr() calls to
+	the new style where the sprintf call is integrated. Uniformize
+	some error messages at the same time.
+
+2008-01-18  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Parse *@<version>
 	symbols names as wildcards and not as regular symbols. They
 	provide the same dependency information for all symbols that share
